added the functionality for the update operation of the website.

--- a/views/manager.mustache
+++ b/views/manager.mustache
@@ -62,6 +62,10 @@
 											<img src="./trash-icon" alt="add_icon" class="w-5 h-5 mr-2 my-auto" />
 											Remove
 										</a>
+										<a class="py-1 px-2 bg-[#04fbeb] hover:bg-[#29ddd4] rounded-md inline-flex cursor-pointer" href="/managerUpdate">
+											<img src="./update-icon" alt="add_icon" class="w-5 h-5 mr-2 my-auto" />
+											Update
+										</a>
 									</div>
 								</div>
 							</div>
