added functionality for the add, remove and update options for all the categories

--- a/views/mental_health.mustache
+++ b/views/mental_health.mustache
@@ -155,11 +155,9 @@
 		</header>
 		<main class="mx-28">
 			<section class="flex flex-col space-y-10">
-				<h1 class="text-4xl font-bold text-center">Fitness Goals</h1>
+				<h1 class="text-4xl font-bold text-center">Mental Health Goals</h1>
 				<p class="text-center">
-					The company is committed to your health and happiness, not just at work but in your personal life too. To help achieve this goal we have setup a program of activities so you can
-					keep healthy and have fun here at work. We may even provide some goodies from time to time to help you out. Please take the time to read through the wellness plan and familiarise
-					yourself with our goals and how we are going to meet them. We look forward to working together towards healthier happier lives.
+					AGB has an Employee Wellness Program that includes monthly wellness check-ins, a corporate yoga studio, meditation classes, and access to a private counselor who specializes in workplace issues. We also offer regular online workshops on topics ranging from stress management to mindfulness meditation, which can be very helpful if you're looking for ways to improve your mental health at work as well as outside of it.
 				</p>
 			</section>
 			<section class="bg-[url('/fitness-bg')] bg-cover bg-center min-h-fit h-full w-full space-y-10 mt-10">
