--- a/views/nutrition.mustache
+++ b/views/nutrition.mustache
@@ -6,7 +6,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Manager View</title>
+		<title>Nutrition Page</title>
 		<script src="https://cdn.tailwindcss.com"></script>
 		<!-- List code Start -->
 		<style>
@@ -155,7 +155,7 @@
 		</header>
 		<main class="mx-28">
 			<section class="flex flex-col space-y-10">
-				<h1 class="text-4xl font-bold text-center">Fitness Goals</h1>
+				<h1 class="text-4xl font-bold text-center">Nutrition Goals</h1>
 				<p class="text-center">
 					The company is committed to your health and happiness, not just at work but in your personal life too. To help achieve this goal we have setup a program of activities so you can
 					keep healthy and have fun here at work. We may even provide some goodies from time to time to help you out. Please take the time to read through the wellness plan and familiarise
