--- a/views/fitness.mustache
+++ b/views/fitness.mustache
@@ -141,8 +141,8 @@
 				</a>
 				<nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400 flex flex-wrap items-center text-base justify-center font-bold">
 					<a class="mr-5 hover:text-gray-900 hover:border-b-2 hover:border-black cursor-pointer p-2" href="/">About Us</a>
-					<a class="mr-5 hover:text-gray-900 hover:border-b-2 hover:border-black cursor-pointer p-2" href="/wellness">Wellness</a>
-					<a class="mr-5 hover:text-gray-900 border-b-2 border-black cursor-pointer p-2" href="/manager">Staff</a>
+					<a class="mr-5 hover:text-gray-900 border-b-2 border-black cursor-pointer p-2" href="/wellness">Wellness</a>
+					<a class="mr-5 hover:text-gray-900 hover:border-b-2 hover:border-black cursor-pointer p-2" href="/manager">Staff</a>
 				</nav>
 
 				<a class="inline-flex items-center border-0 py-1 px-3 focus:outline-none rounded text-base mt-4 md:mt-0 mx-5 bg-[#04fbeb] hover:bg-[#29ddd4]" href="/">
@@ -163,7 +163,7 @@
 				</p>
 			</section>
 			<section class="bg-[url('/fitness-bg')] bg-cover bg-center min-h-fit h-full w-full space-y-10 mt-10">
-				<section class="text-gray-600 body-font w-full h-[100vh]">
+				<section class="text-gray-600 body-font w-full h-[100vh] space-y-10">
 					<!-- goals section -->
 					<section class="space-y-5">
 						<div class="flex flex-col space-y-5 bg-black rounded-md bg-opacity-30 p-5 backdrop-blur-lg">
@@ -216,7 +216,10 @@
 
 					<!-- Highlights -->
 					<section>
-						<div></div>
+						<div class="md:grid md:grid-cols-2 grid grid-cols-1 gap-4 bg-black rounded-md bg-opacity-30 p-5 backdrop-blur-lg h-full">
+							<div class="cols-span-1 p-2 w-full bg-[url('/boxing')] bg-cover bg-center bg-no-repeat rounded-md h-52 w-full border border-white"></div>
+							<div class="cols-span-1 p-2 w-full text-white"> <h2 class="text-2xl font-bold text-center">Shadow Boxing</h2> <p> We have created a program called "Fight Club" where employees who want to participate can do so. The program includes a variety of activities, the most important being shadow boxing which will be conducted via zoom and the instructor will be a professional boxer.</p></div>
+						</div>
 					</section>
 				</section>
 			</section>
