--- a/views/mental_health.mustache
+++ b/views/mental_health.mustache
@@ -161,7 +161,7 @@
 				</p>
 			</section>
 			<section class="bg-[url('/fitness-bg')] bg-cover bg-center min-h-fit h-full w-full space-y-10 mt-10">
-				<section class="text-gray-600 body-font w-full h-[100vh]">
+				<section class="text-gray-600 body-font w-full h-[100vh] space-y-10">
 					<!-- goals section -->
 					<section class="space-y-5">
 						<div class="flex flex-col space-y-5 bg-black rounded-md bg-opacity-30 p-5 backdrop-blur-lg">
@@ -214,7 +214,18 @@
 
 					<!-- Highlights -->
 					<section>
-						<div></div>
+						<div class="md:grid md:grid-cols-2 grid grid-cols-1 gap-4 bg-black rounded-md bg-opacity-30 p-5 backdrop-blur-lg h-full">
+							<div class="cols-span-1 p-2 w-full bg-[url('/boxing')] bg-cover bg-center bg-no-repeat rounded-md h-52 w-full border border-white"></div>
+							<div class="cols-span-1 p-2 w-full text-white"> <h2 class="text-2xl font-bold text-center">Shadow Boxing</h2> <p> We have created a program called "Fight Club" where employees who want to participate can do so. The program includes a variety of activities, the most important being shadow boxing which will be conducted via zoom and the instructor will be a professional boxer.</p></div>
+						</div>
+					</section>
+					<section>
+						<div class="md:grid md:grid-cols-2 grid grid-cols-1 gap-4 bg-black rounded-md bg-opacity-30 p-5 backdrop-blur-lg h-full">
+							<div class="md:hidden cols-span-1 p-2 w-full bg-[url('/mental_health2')] bg-cover bg-[center_top_25%] bg-no-repeat rounded-md h-52 w-full border border-white"></div>
+							<div class="cols-span-1 p-2 w-full text-white"> <h2 class="text-2xl font-bold text-center">Aerobics</h2> <p> At Agb, we believe that aerobics is an important part of a healthy lifestyle. We've been incorporating it into our employees' lives for years, and now it's time to show them how much they can benefit from it.
+We'll be holding a series of classes for all employees at the gym.</p></div>
+							<div class="hidden md:block cols-span-1 p-2 w-full bg-[url('/mental_health2')] bg-cover bg-[center_top_25%] bg-no-repeat rounded-md h-52 w-full border border-white"></div>
+						</div>
 					</section>
 				</section>
 			</section>
