--- a/views/nutrition.mustache
+++ b/views/nutrition.mustache
@@ -163,7 +163,7 @@
 				</p>
 			</section>
 			<section class="bg-[url('/fitness-bg')] bg-cover bg-center min-h-fit h-full w-full space-y-10 mt-10">
-				<section class="text-gray-600 body-font w-full h-[100vh]">
+				<section class="text-gray-600 body-font w-full h-[100vh] space-y-10">
 					<!-- goals section -->
 					<section class="space-y-5">
 						<div class="flex flex-col space-y-5 bg-black rounded-md bg-opacity-30 p-5 backdrop-blur-lg">
@@ -216,7 +216,19 @@
 
 					<!-- Highlights -->
 					<section>
-						<div></div>
+						<div class="md:grid md:grid-cols-2 grid grid-cols-1 gap-4 bg-black rounded-md bg-opacity-30 p-5 backdrop-blur-lg h-full">
+							<div class="cols-span-1 p-2 w-full bg-[url('/boxing')] bg-cover bg-center bg-no-repeat rounded-md h-52 w-full border border-white"></div>
+							<div class="cols-span-1 p-2 w-full text-white"> <h2 class="text-2xl font-bold text-center">Balanced Diet</h2> <p> A healthy diet should include:
+ A variety of fresh fruits and vegetables (3-5 portions per day) 
+Minimum of three servings of breads and cereals. At least two portions of pulses (beans or peas) every day.</p></div>
+						</div>
+					</section>
+					<section>
+						<div class="md:grid md:grid-cols-2 grid grid-cols-1 gap-4 bg-black rounded-md bg-opacity-30 p-5 backdrop-blur-lg h-full">
+							<div class="md:hidden cols-span-1 p-2 w-full bg-[url('/mental_health2')] bg-cover bg-[center_top_25%] bg-no-repeat rounded-md h-52 w-full border border-white"></div>
+							<div class="cols-span-1 p-2 w-full text-white"> <h2 class="text-2xl font-bold text-center">Effects of a Bad Diet</h2> <p> When you're eating well, you're doing what your body needs to stay healthy and strong. And when you eat poorly or eat too much, guess what happens? You're giving your body exactly what it doesn't need—and that leads to weight gain, exhaustion, and all kinds of health problems.</p></div>
+							<div class="hidden md:block cols-span-1 p-2 w-full bg-[url('/mental_health2')] bg-cover bg-[center_top_25%] bg-no-repeat rounded-md h-52 w-full border border-white"></div>
+						</div>
 					</section>
 				</section>
 			</section>
