update the crud functionalities to match the new model

--- a/views/fitness.mustache
+++ b/views/fitness.mustache
@@ -229,8 +229,13 @@ We'll be holding a series of classes for all employees at the gym.</p></div>
 							<div class="hidden md:block cols-span-1 p-2 w-full bg-[url('/mental_health2')] bg-cover bg-[center_top_25%] bg-no-repeat rounded-md h-52 w-full border border-white"></div>
 						</div>
 					</section>
+					<div class="flex">
+			<!-- Copyright -->
+			<p class="mx-auto font-bold">&copy AGB 2022</p>
+		</div>
 				</section>
 			</section>
 		</main>
+		
 	</body>
 </html>
