--- a/views/manager.mustache
+++ b/views/manager.mustache
@@ -74,5 +74,9 @@
 				</div>
 			</div>
 		</main>
+		<footer class="flex">
+			<!-- Copyright -->
+			<p class="mx-auto font-bold">&copy AGB 2022</p>
+		</footer>
 	</body>
 </html>
