--- a/views/mental_health.mustache
+++ b/views/mental_health.mustache
@@ -215,20 +215,24 @@
 					<!-- Highlights -->
 					<section>
 						<div class="md:grid md:grid-cols-2 grid grid-cols-1 gap-4 bg-black rounded-md bg-opacity-30 p-5 backdrop-blur-lg h-full">
-							<div class="cols-span-1 p-2 w-full bg-[url('/boxing')] bg-cover bg-center bg-no-repeat rounded-md h-52 w-full border border-white"></div>
-							<div class="cols-span-1 p-2 w-full text-white"> <h2 class="text-2xl font-bold text-center">Shadow Boxing</h2> <p> We have created a program called "Fight Club" where employees who want to participate can do so. The program includes a variety of activities, the most important being shadow boxing which will be conducted via zoom and the instructor will be a professional boxer.</p></div>
+							<div class="cols-span-1 p-2 w-full bg-[url('/mental_health_1')] bg-cover bg-center bg-no-repeat rounded-md h-52 w-full border border-white"></div>
+							<div class="cols-span-1 p-2 w-full text-white"> <h2 class="text-2xl font-bold text-center">Meditating</h2> <p> Meditation has been shown to improve depression symptoms in people who suffer from depression by helping them cope with negative feelings more effectively. It also helps people who have anxiety or other mental health issues avoid future episodes by reducing stress levels.</p></div>
 						</div>
 					</section>
 					<section>
 						<div class="md:grid md:grid-cols-2 grid grid-cols-1 gap-4 bg-black rounded-md bg-opacity-30 p-5 backdrop-blur-lg h-full">
 							<div class="md:hidden cols-span-1 p-2 w-full bg-[url('/mental_health2')] bg-cover bg-[center_top_25%] bg-no-repeat rounded-md h-52 w-full border border-white"></div>
-							<div class="cols-span-1 p-2 w-full text-white"> <h2 class="text-2xl font-bold text-center">Aerobics</h2> <p> At Agb, we believe that aerobics is an important part of a healthy lifestyle. We've been incorporating it into our employees' lives for years, and now it's time to show them how much they can benefit from it.
-We'll be holding a series of classes for all employees at the gym.</p></div>
+							<div class="cols-span-1 p-2 w-full text-white"> <h2 class="text-2xl font-bold text-center">Listening to Music</h2> <p> The benefits of music on the mind are well-documented. Music can help us to be more productive and focused, as well as reduce stress and anxiety. In fact, research has shown that listening to music can even increase our ability to pay attention by as much as 40%.</p></div>
 							<div class="hidden md:block cols-span-1 p-2 w-full bg-[url('/mental_health2')] bg-cover bg-[center_top_25%] bg-no-repeat rounded-md h-52 w-full border border-white"></div>
 						</div>
 					</section>
+					<div class="flex">
+			<!-- Copyright -->
+			<p class="mx-auto font-bold">&copy AGB 2022</p>
+		</div>
 				</section>
 			</section>
 		</main>
+		
 	</body>
 </html>
