--- a/views/user/login.mustache
+++ b/views/user/login.mustache
@@ -62,5 +62,9 @@
 				</div>
 			</form>
 		</main>
+		<footer class="flex">
+			<!-- Copyright -->
+			<p class="mx-auto font-bold">&copy AGB 2022</p>
+		</footer>
 	</body>
 </html>
