--- a/views/manager.mustache
+++ b/views/manager.mustache
@@ -11,7 +11,7 @@
 		<header class="text-gray-600 body-font">
 			<div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
 				<a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
-					<img src="/logo" alt="AGB_logo" class="w-20 h-15" />
+					<img src="./images/logo.png" alt="AGB_logo" class="w-20 h-15" />
 				</a>
 				<nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400 flex flex-wrap items-center text-base justify-center font-bold">
 					<a class="mr-5 hover:text-gray-900 hover:border-b-2 hover:border-black cursor-pointer p-2" href="/">About Us</a>
@@ -28,7 +28,7 @@
 			</div>
 		</header>
 		<main class="w-full h-[80vh]">
-			<div class="bg-[url('./manager_bg')] bg-cover bg-center h-full">
+			<div class="bg-[url('./images/manager.jpg')] bg-cover bg-center h-full">
 				<div class="flex flex-col mx-80 mt-10">
 					<div class="overflow-x-auto sm:-mx-6 lg:-mx-8">
 						<div class="py-4 inline-block min-w-full sm:px-6 lg:px-8 bg-[#000000] rounded-md bg-opacity-[.45] backdrop-blur-md">
@@ -55,15 +55,15 @@
 								<div class="flex mt-4">
 									<div class="mx-auto space-x-6 font-bold text-white">
 										<a class="py-1 px-2 bg-[#04fbeb] hover:bg-[#29ddd4] rounded-md inline-flex cursor-pointer" href="/managerAdd">
-											<img src="./add-icon" alt="add_icon" class="w-5 h-5 mr-2 my-auto" />
+											<img src="./images/add.png" alt="add_icon" class="w-5 h-5 mr-2 my-auto" />
 											Add
 										</a>
 										<a class="py-1 px-2 bg-[#04fbeb] hover:bg-[#29ddd4] rounded-md inline-flex cursor-pointer" href="/managerRemove">
-											<img src="./trash-icon" alt="add_icon" class="w-5 h-5 mr-2 my-auto" />
+											<img src="./images/trash.png" alt="add_icon" class="w-5 h-5 mr-2 my-auto" />
 											Remove
 										</a>
 										<a class="py-1 px-2 bg-[#04fbeb] hover:bg-[#29ddd4] rounded-md inline-flex cursor-pointer" href="/managerUpdate">
-											<img src="./update-icon" alt="add_icon" class="w-5 h-5 mr-2 my-auto" />
+											<img src="./images/refresh.png" alt="add_icon" class="w-5 h-5 mr-2 my-auto" />
 											Update
 										</a>
 									</div>
