--- a/views/mental_health.mustache
+++ b/views/mental_health.mustache
@@ -6,7 +6,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Manager View</title>
+		<title>Mental Health Goals</title>
 		<script src="https://cdn.tailwindcss.com"></script>
 		<!-- List code Start -->
 		<style>
@@ -137,7 +137,7 @@
 		<header class="text-gray-600 body-font">
 			<div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
 				<a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
-					<img src="/logo" alt="AGB_logo" class="w-20 h-15" />
+					<img src="./images/logo.png" alt="AGB_logo" class="w-20 h-15" />
 				</a>
 				<nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400 flex flex-wrap items-center text-base justify-center font-bold">
 					<a class="mr-5 hover:text-gray-900 hover:border-b-2 hover:border-black cursor-pointer p-2" href="/">About Us</a>
@@ -160,7 +160,7 @@
 					AGB has an Employee Wellness Program that includes monthly wellness check-ins, a corporate yoga studio, meditation classes, and access to a private counselor who specializes in workplace issues. We also offer regular online workshops on topics ranging from stress management to mindfulness meditation, which can be very helpful if you're looking for ways to improve your mental health at work as well as outside of it.
 				</p>
 			</section>
-			<section class="bg-[url('/fitness-bg')] bg-cover bg-center min-h-fit h-full w-full space-y-10 mt-10">
+			<section class="bg-[url('./images/mental_healthBg.jpg')] bg-cover bg-center min-h-fit h-full w-full space-y-10 mt-10">
 				<section class="text-gray-600 body-font w-full h-[100vh] space-y-10">
 					<!-- goals section -->
 					<section class="space-y-5">
@@ -189,22 +189,22 @@
 									<p>{{_id}}</p>
 								</div>
 								<!-- Completed -->
-								<div class="my-auto w-1/4 mx-auto"><img src="/checked" alt="check-mark" class="w-10 h-10" /></div>
+								<div class="my-auto w-1/4 mx-auto"><img src="./images/check-mark.png" alt="check-mark" class="w-10 h-10" /></div>
 							</div>
                             {{/goals}}
 							<!-- Buttons -->
 							<div class="flex">
 								<div class="mx-auto space-x-5">
 									<a class="py-1 px-2 bg-[#04fbeb] hover:bg-[#29ddd4] rounded-md inline-flex cursor-pointer" href="/addGoal">
-											<img src="./add-icon" alt="add_icon" class="w-5 h-5 mr-2 my-auto" />
+											<img src="./images/add.png" alt="add_icon" class="w-5 h-5 mr-2 my-auto" />
 											Add
 										</a>
 										<a class="py-1 px-2 bg-[#04fbeb] hover:bg-[#29ddd4] rounded-md inline-flex cursor-pointer" href="/removeGoal">
-											<img src="./trash-icon" alt="add_icon" class="w-5 h-5 mr-2 my-auto" />
+											<img src="./images/trash.png" alt="add_icon" class="w-5 h-5 mr-2 my-auto" />
 											Remove
 										</a>
 										<a class="py-1 px-2 bg-[#04fbeb] hover:bg-[#29ddd4] rounded-md inline-flex cursor-pointer" href="/updateGoal">
-											<img src="./update-icon" alt="add_icon" class="w-5 h-5 mr-2 my-auto" />
+											<img src="./images/refresh.png" alt="add_icon" class="w-5 h-5 mr-2 my-auto" />
 											Update
 										</a>
 								</div>
@@ -215,15 +215,15 @@
 					<!-- Highlights -->
 					<section>
 						<div class="md:grid md:grid-cols-2 grid grid-cols-1 gap-4 bg-black rounded-md bg-opacity-30 p-5 backdrop-blur-lg h-full">
-							<div class="cols-span-1 p-2 w-full bg-[url('/mental_health_1')] bg-cover bg-center bg-no-repeat rounded-md h-52 w-full border border-white"></div>
+							<div class="cols-span-1 p-2 w-full bg-[url('./images/mentalHealth.jpg')] bg-cover bg-center bg-no-repeat rounded-md h-52 w-full border border-white"></div>
 							<div class="cols-span-1 p-2 w-full text-white"> <h2 class="text-2xl font-bold text-center">Meditating</h2> <p> Meditation has been shown to improve depression symptoms in people who suffer from depression by helping them cope with negative feelings more effectively. It also helps people who have anxiety or other mental health issues avoid future episodes by reducing stress levels.</p></div>
 						</div>
 					</section>
 					<section>
 						<div class="md:grid md:grid-cols-2 grid grid-cols-1 gap-4 bg-black rounded-md bg-opacity-30 p-5 backdrop-blur-lg h-full">
-							<div class="md:hidden cols-span-1 p-2 w-full bg-[url('/mental_health2')] bg-cover bg-[center_top_25%] bg-no-repeat rounded-md h-52 w-full border border-white"></div>
+							<div class="md:hidden cols-span-1 p-2 w-full bg-[url('./images/mental_health2.jpg')] bg-cover bg-[center_top_25%] bg-no-repeat rounded-md h-52 w-full border border-white"></div>
 							<div class="cols-span-1 p-2 w-full text-white"> <h2 class="text-2xl font-bold text-center">Listening to Music</h2> <p> The benefits of music on the mind are well-documented. Music can help us to be more productive and focused, as well as reduce stress and anxiety. In fact, research has shown that listening to music can even increase our ability to pay attention by as much as 40%.</p></div>
-							<div class="hidden md:block cols-span-1 p-2 w-full bg-[url('/mental_health2')] bg-cover bg-[center_top_25%] bg-no-repeat rounded-md h-52 w-full border border-white"></div>
+							<div class="hidden md:block cols-span-1 p-2 w-full bg-[url('./images/mental_health2.jpg')] bg-cover bg-[center_top_25%] bg-no-repeat rounded-md h-52 w-full border border-white"></div>
 						</div>
 					</section>
 					<div class="flex">
