--- a/views/nutrition.mustache
+++ b/views/nutrition.mustache
@@ -6,7 +6,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Nutrition Page</title>
+		<title>Nutrition Goals</title>
 		<script src="https://cdn.tailwindcss.com"></script>
 		<!-- List code Start -->
 		<style>
@@ -137,7 +137,7 @@
 		<header class="text-gray-600 body-font">
 			<div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
 				<a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
-					<img src="/logo" alt="AGB_logo" class="w-20 h-15" />
+					<img src="./images/logo.png" alt="AGB_logo" class="w-20 h-15" />
 				</a>
 				<nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400 flex flex-wrap items-center text-base justify-center font-bold">
 					<a class="mr-5 hover:text-gray-900 hover:border-b-2 hover:border-black cursor-pointer p-2" href="/">About Us</a>
@@ -162,7 +162,7 @@
 					yourself with our goals and how we are going to meet them. We look forward to working together towards healthier happier lives.
 				</p>
 			</section>
-			<section class="bg-[url('/nutrition_bg')] bg-cover bg-center min-h-fit h-full w-full space-y-10 mt-10">
+			<section class="bg-[url('./images/nutritionBg.jpg')] bg-cover bg-center min-h-fit h-full w-full space-y-10 mt-10">
 				<section class="text-gray-600 body-font w-full h-[100vh] space-y-10">
 					<!-- goals section -->
 					<section class="space-y-5">
@@ -191,22 +191,22 @@
 									<p>{{_id}}</p>
 								</div>
 								<!-- Completed -->
-								<div class="my-auto w-1/4 mx-auto"><img src="/checked" alt="check-mark" class="w-10 h-10" /></div>
+								<div class="my-auto w-1/4 mx-auto"><img src="./images/check-mark.png" alt="check-mark" class="w-10 h-10" /></div>
 							</div>
                             {{/goals}}
 							<!-- Buttons -->
 							<div class="flex">
 								<div class="mx-auto space-x-5">
 									<a class="py-1 px-2 bg-[#04fbeb] hover:bg-[#29ddd4] rounded-md inline-flex cursor-pointer" href="/addGoal">
-											<img src="./add-icon" alt="add_icon" class="w-5 h-5 mr-2 my-auto" />
+											<img src="./images/add.png" alt="add_icon" class="w-5 h-5 mr-2 my-auto" />
 											Add
 										</a>
 										<a class="py-1 px-2 bg-[#04fbeb] hover:bg-[#29ddd4] rounded-md inline-flex cursor-pointer" href="/removeGoal">
-											<img src="./trash-icon" alt="add_icon" class="w-5 h-5 mr-2 my-auto" />
+											<img src="./images/trash.png" alt="add_icon" class="w-5 h-5 mr-2 my-auto" />
 											Remove
 										</a>
 										<a class="py-1 px-2 bg-[#04fbeb] hover:bg-[#29ddd4] rounded-md inline-flex cursor-pointer" href="/updateGoal">
-											<img src="./update-icon" alt="add_icon" class="w-5 h-5 mr-2 my-auto" />
+											<img src="./images/refresh.png" alt="add_icon" class="w-5 h-5 mr-2 my-auto" />
 											Update
 										</a>
 								</div>
@@ -217,7 +217,7 @@
 					<!-- Highlights -->
 					<section>
 						<div class="md:grid md:grid-cols-2 grid grid-cols-1 gap-4 bg-black rounded-md bg-opacity-30 p-5 backdrop-blur-lg h-full">
-							<div class="cols-span-1 p-2 w-full bg-[url('/nutrition_2')] bg-cover bg-center bg-no-repeat rounded-md h-52 w-full border border-white"></div>
+							<div class="cols-span-1 p-2 w-full bg-[url('./images/nutrition2.jpg')] bg-cover bg-center bg-no-repeat rounded-md h-52 w-full border border-white"></div>
 							<div class="cols-span-1 p-2 w-full text-white"> <h2 class="text-2xl font-bold text-center">Balanced Diet</h2> <p> A healthy diet should include:
  A variety of fresh fruits and vegetables (3-5 portions per day) 
 Minimum of three servings of breads and cereals. At least two portions of pulses (beans or peas) every day.</p></div>
@@ -225,9 +225,9 @@ Minimum of three servings of breads and cereals. At least two portions of pulses
 					</section>
 					<section>
 						<div class="md:grid md:grid-cols-2 grid grid-cols-1 gap-4 bg-black rounded-md bg-opacity-30 p-5 backdrop-blur-lg h-full">
-							<div class="md:hidden cols-span-1 p-2 w-full bg-[url('/nutrition_3')] bg-cover bg-[center_top_25%] bg-no-repeat rounded-md h-52 w-full border border-white"></div>
+							<div class="md:hidden cols-span-1 p-2 w-full bg-[url('./images/nutrition3.jpg')] bg-cover bg-[center_top_25%] bg-no-repeat rounded-md h-52 w-full border border-white"></div>
 							<div class="cols-span-1 p-2 w-full text-white"> <h2 class="text-2xl font-bold text-center">Effects of a Bad Diet</h2> <p> When you're eating well, you're doing what your body needs to stay healthy and strong. And when you eat poorly or eat too much, guess what happens? You're giving your body exactly what it doesn't need—and that leads to weight gain, exhaustion, and all kinds of health problems.</p></div>
-							<div class="hidden md:block cols-span-1 p-2 w-full bg-[url('/mental_health2')] bg-cover bg-[center_top_25%] bg-no-repeat rounded-md h-52 w-full border border-white"></div>
+							<div class="hidden md:block cols-span-1 p-2 w-full bg-[url('./images/nutrition3.jpg')] bg-cover bg-[center_top_25%] bg-no-repeat rounded-md h-52 w-full border border-white"></div>
 						</div>
 					</section>
 					<div class="flex">
